--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.lock
+*.log
+.metadata/*
+.metadata/.plugins/org.eclipse.core.resources/.history/9a/005b9b1668e4001511699efec140f73b
+*.project
+com.obdgp/.settings/org.eclipse.jdt.core.prefs
+*.prefs
+com.obdgp/.classpath
